deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: crytek236/fastapi-app:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "5"
            memory: "3000Mi"
          limits:
            cpu: "5"
            memory: "3000Mi"
