service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
